db1group: Desenvolvedor(a) Fullstack Pleno (Java e React + TypeScript) | Foco em Frontend - https://db1.inhire.app/vagas/723d0b3f-00b5-4150-a63f-bf70778fe0c7/desenvolvedora-fullstack-pleno-java-e-react-typescript-or-foco-em-frontend?r=43941dbb-f183-4c7c-a931-f64828e11cf7

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "node scripts/render.mjs",
+    "build-ptbr": "node scripts/render-ptbr.mjs",
     "pdf": "node scripts/export-pdf.mjs"
   },
   "dependencies": {
